--- a/assets/css/group.css
+++ b/assets/css/group.css
@@ -60,8 +60,10 @@ footer{
 
 .footerBlock{
     display:inline-block;
-    padding: 15px;
+    padding: 3em;
+    margin: 0em;
 }
+
 
 .footerIntro{
     font-size:small;
